@@ -1,6 +1,8 @@
 Release 1.0 (in development)
 ============================
 
+* Removed the deprecated ``sphinx.builder`` module.
+
 * #193: Added a ``visitedlinkcolor`` theme option to the default
   theme.
 
